[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/knight_enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemies/KnightEnemy.gd" type="Script" id=2]
[ext_resource path="res://Enemies/knight_enemy_attack.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 12 )

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/AttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/AttackSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body/AttackSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="KnightEnemy" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 4
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
texture = ExtResource( 1 )

[node name="AttackSprite" type="Sprite" parent="Body"]
visible = false
position = Vector2( 8, 0 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, 6 )
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="MovementIntervalTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StunnedTimer" type="Timer" parent="."]

[node name="MovementDurationTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/rest = SubResource( 4 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
